--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
     <nav>
       <div class="logo">
-        <img src="./Asset/image001.png" alt="Logo">
+        <img src="image001.png" alt="Logo">
       </div>
       <ul class="navigate">
         <a href="#">
@@ -158,7 +158,7 @@
           <div class="col-xl-4 col-lg-4 mb-50">
             <div class="footer-widget">
               <div class="footer-logo">
-                <a href="index.html"><img src="Asset/image001.png" class="img-fluid" alt="logo"></a>
+                <a href="index.html"><img src="image001.png" class="img-fluid" alt="logo"></a>
               </div>
               <div class="footer-text">
                 <p>Lorem ipsum dolor sit amet.</p>
